--- a/1_california.qmd
+++ b/1_california.qmd
@@ -1,13 +1,15 @@
-# 项目1：California House Prices 学生项目要求
+---
+title: 项目1：California House Prices 学生项目要求
+---
 
-## 0. 项目背景
+## 项目背景
 
 * **项目名称**：加州房价预测
 * **应用场景 / 价值**：根据加州各地区的地理和社会经济数据，预测未来房屋的**中位数价格**（`MedInc`）。该模型可以用于房产投资、政府规划和房地产风险管理等场景。
 * **数据来源**：课程提供自 Kaggle 数据集 *California Housing Prices* 的**子集**，包含 **20640** 行，10 个特征，目标变量为 `MedHouseVal`（房屋中位数价值，单位千美元）。
 * **任务类型**：回归（预测目标变量 `MedHouseVal`）。
 
-## 1. 项目任务（必须完成）
+## 项目任务（必须完成）
 
 1. **目标变量口径**：以 `MedHouseVal` 为目标变量，表示房屋中位数价格（单位：千美元）；在报告中解释其含义并打印**分布**（均值、标准差、分位数）。
 2. **数据读取与检查**：打印行列数、缺失概览、关键列存在性；将摘要记录在 `README.md` 中。
@@ -30,7 +32,7 @@
 7. **结果导出**：在 `outputs/` 目录输出预测值与实际值。
 8. **模型解释**：打印和可视化模型的系数或特征重要性，结合业务给出 2–3 条有价值的见解（例如“面积与房价的关系”）。
 
-## 2. 团队与分工（6-10 人）
+## 团队与分工（6-10 人）
 
 * **推荐规模**：6-10 人；可根据团队实际人数灵活调整。
 * **核心角色（必须）**：
@@ -55,13 +57,13 @@
   - 9 人：6 个核心角色 + 2 个可选角色 + 1 个协作角色
   - 10 人：6 个核心角色 + 2 个可选角色 + 2 个协作角色
 
-## 3. 数据与合规
+## 数据与合规
 
 * **数据说明**：在 `README.md` 或报告中写明数据来源、时间范围、字段描述、目标变量口径、特征清洗和处理方式。
 * **隐私与伦理**：数据来自公开的加州房产市场，不含个人敏感信息。
 * **数据字典**：提供关键字段释义，特别是对于 `ocean_proximity` 的编码和其他处理。
 
-## 4. 交付与时间线（统一里程碑）
+## 交付与时间线（统一里程碑）
 
 * **W3：立项检查**
 
@@ -73,7 +75,7 @@
 
   提交完整复现包（见下 §5）+ 报告（6–8 页）+ 幻灯（6–8 页）+ AI 使用记录。
 
-## 5. 交付清单（统一目录）
+## 交付清单（统一目录）
 
 ```
 project_root/
@@ -91,7 +93,7 @@ project_root/
   .gitignore               # 忽略大文件（保留示例数据与示例输出）
 ```
 
-## 6. 技术要求
+## 技术要求
 
 **最低要求（必须达成）**
 
@@ -109,11 +111,11 @@ project_root/
 * **可视化 ≥2 张**：绘制特征重要性图、预测与实际房价对比图、残差图等。
 * **工程性**：友好报错与自动日志（数据形状、缺失/异常统计、耗时、随机种子）。
 
-## 7. 评分与 Rubric（统一口径，可微调）
+## 评分与 Rubric（统一口径，可微调）
 
 > 总评 = **团队分 90% + 互评 10%**；如公布**难度系数**（0.9 / 1.0 / 1.1），按乘数计算。
 
-### 7.1 团队分（90%）
+### 团队分（90%）
 
 > 其中"报告与可读性"仅针对**报告文本与图表**评分。
 
@@ -126,12 +128,12 @@ project_root/
 | 报告与可读性(30) | 结构清晰、图表规范、叙述有因有据 | 大体清晰        | 说明不全/结构混乱  | 缺失关键说明 |
 | 演示表达(20)    | 逻辑清楚，答辩到位      | 讲清主要结论      | 表达一般       | 不能自洽   |
 
-### 7.2 互评（10%）
+### 互评（10%）
 
 * 每位成员对**其他人**打分；与教师评分结合。
 * 若互评明显失真，教师可依据提交记录与痕迹进行调整。
 
-## 8. 报告与答辩内容（统一骨架）
+## 报告与答辩内容（统一骨架）
 
 **报告（6–8 页）**
 
@@ -144,3 +146,17 @@ project_root/
 
 **答辩幻灯（6–8 页）**：与报告同结构，突出关键结论与可视化（ROC/PR、特征贡献等）。
 
+## 提交与命名规范
+
+* **打包**：提交 `.zip`，保留目录结构；不要包含超大无关文件。
+* **命名**：`【CHP】_【班级】_【队名】.zip`；报告/幻灯使用相同前缀。
+* **提交方式**：按课程平台要求（学习通 / GitHub Release）。
+
+---
+
+## 学术诚信与 AI 使用政策
+
+* 允许用 AI 工具进行**资料查询、代码解释、调试建议**；
+* **禁止**：粘贴未理解的大段生成代码、虚构数据/结果、抄袭他组；
+* 必交 `ai_usage_log.md`（日期、工具、用途、是否采纳与原因 2–3 句）；
+* 发现学术不端将按校规处理。
