--- a/w1_python_ml_intro.qmd
+++ b/w1_python_ml_intro.qmd
@@ -1,6 +1,9 @@
-# 第一讲：Python基础与机器学习入门
+---
+title: 第一讲：Python基础与机器学习入门
+---
 
 ```{python}
+#| echo: false
 import matplotlib.pyplot as plt
 # 根据操作系统设置不同的字体
 import platform
@@ -259,7 +262,7 @@ flowchart TB
 
 ### 为什么 LLM 这么火？
 
-#### 1. **数据规模的突破**
+1. **数据规模的突破**
 
 **传统机器学习：**
 - 数据集：几千到几万个样本
@@ -269,7 +272,7 @@ flowchart TB
 - 数据集：万亿级别的文本数据
 - 特征：数万亿个参数自动学习
 
-#### 2. **通用能力**
+2. **通用能力**
 
 **传统模型：** 一个模型解决一个任务
 - 房价预测模型 → 只能预测房价
@@ -278,7 +281,7 @@ flowchart TB
 **LLM：** 一个模型解决多种任务
 - 文本生成、翻译、编程、分析、创作...
 
-#### 3. **涌现能力（Emergent Abilities）**
+3. **涌现能力（Emergent Abilities）**
 
 **小模型**：能做简单任务
 **大模型**：突然获得复杂能力（如数学推理、代码编写）
@@ -300,22 +303,22 @@ flowchart TB
 
 ### LLM 在金融领域的应用
 
-#### 1. **智能客服与对话**
+1. **智能客服与对话**
 - 自动回答客户问题
 - 处理投诉和咨询
 - 24小时在线服务
 
-#### 2. **金融文本分析**
+2. **金融文本分析**
 - 自动阅读研报、新闻
 - 生成投资摘要
 - 情感分析（市场情绪）
 
-#### 3. **风险评估**
+3. **风险评估**
 - 分析企业财报文本
 - 理解合同条款
 - 识别潜在风险
 
-#### 4. **量化投资**
+4. **量化投资**
 - 生成交易策略代码
 - 分析市场趋势
 - 自动化报告生成
