--- a/w3_lm_regularization.qmd
+++ b/w3_lm_regularization.qmd
@@ -1,6 +1,9 @@
-# 第三讲：线性回归的正则化
+---
+title: 第三讲：线性回归的正则化
+---
 
 ```{python}
+#| echo: false
 import matplotlib.pyplot as plt
 import numpy as np
 import pandas as pd
@@ -70,7 +73,7 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ---
 
-## 1.1 用多项式回归理解过拟合
+## 用多项式回归理解过拟合
 
 ### 真实场景模拟
 
@@ -134,7 +137,7 @@ plt.show()
 
 ---
 
-## 1.2 欠拟合 vs 过拟合 vs 刚刚好
+## 欠拟合 vs 过拟合 vs 刚刚好
 
 | 模型状态   | 模型复杂度 | 训练集误差 | 测试集误差 | 问题         | 表现                  |
 |:--------:|:---------:|:----------:|:----------:|:-----------:|:---------------------:|
@@ -150,7 +153,7 @@ plt.show()
 
 ---
 
-## 1.3 Bias-Variance Tradeoff（偏差-方差权衡）
+## Bias-Variance Tradeoff（偏差-方差权衡）
 
 ```{python}
 #| echo: false
@@ -199,7 +202,7 @@ plt.show()
 
 ---
 
-## 2.1 什么是正则化？
+## 什么是正则化？
 
 ### 问题
 
@@ -223,7 +226,7 @@ $$
 
 ---
 
-## 2.2 正则化的类比
+## 正则化的类比
 
 **类比 1：给模型"戴镣铐"**
 
@@ -239,7 +242,7 @@ $$
 
 ---
 
-## 2.3 正则化的几何直觉
+## 正则化的几何直觉
 
 ```{python}
 #| echo: false
@@ -300,7 +303,7 @@ plt.show()
 
 ---
 
-## 3.1 Ridge 回归（L2 正则化）
+## Ridge 回归（L2 正则化）
 
 ### 损失函数
 
@@ -319,7 +322,7 @@ $$
 
 ---
 
-## 3.2 Lasso 回归（L1 正则化）
+## Lasso 回归（L1 正则化）
 
 ### 损失函数
 
@@ -338,7 +341,7 @@ $$
 
 ---
 
-## 3.3 Elastic Net（L1 + L2）
+## Elastic Net（L1 + L2）
 
 ### 损失函数
 
@@ -359,7 +362,7 @@ $$
 
 ---
 
-## 3.4 三种方法对比总结
+## 三种方法对比总结
 | 方法             | 正则化项                | 权重特点        | 特征选择 | 适用场景         | sklearn类         |
 |------------------|------------------------|----------------|----------|------------------|-------------------|
 | 普通线性回归     | 无                     | 可能很大       | 否       | 特征少、数据多   | LinearRegression  |
@@ -373,7 +376,7 @@ $$
 
 ---
 
-## 4.1 α 的作用
+## α 的作用
 
 ```{python}
 #| echo: false
@@ -449,7 +452,7 @@ plt.show()
 
 ---
 
-## 4.2 交叉验证（Cross-Validation）
+## 交叉验证（Cross-Validation）
 
 ### 为什么需要交叉验证？
 
@@ -524,7 +527,7 @@ plt.show()
 
 ---
 
-## 5.1 正则化路径图（Regularization Path）
+## 正则化路径图（Regularization Path）
 
 **问题**：随着 α 增大，各特征的系数如何变化？
 
@@ -596,7 +599,7 @@ plt.show()
 
 ---
 
-## 6.1 正则化回归完整流程
+## 正则化回归完整流程
 
 ```{mermaid}
 graph TD
@@ -627,7 +630,7 @@ graph TD
 
 ---
 
-## 6.2 常见错误与注意事项
+## 常见错误与注意事项
 
 ### ❌ 错误 1：忘记标准化
 
@@ -675,7 +678,7 @@ graph TD
 
 ---
 
-## 6.3 实用技巧
+## 实用技巧
 
 ### 技巧 1：先尝试 Lasso
 
@@ -718,17 +721,17 @@ graph TD
 
 ## 本讲核心概念
 
-### 1. 过拟合与正则化
+### 过拟合与正则化
 - **过拟合**：模型太复杂，记住了训练数据的噪声
 - **正则化**：在损失函数中加入复杂度惩罚，限制模型复杂度
 - **Bias-Variance Tradeoff**：找到偏差和方差的平衡点
 
-### 2. 三种正则化方法
+### 三种正则化方法
 - **Ridge (L2)**：让系数变小但不为 0，适合所有特征都重要
 - **Lasso (L1)**：让某些系数变为 0，自动特征选择
 - **Elastic Net**：结合 Ridge 和 Lasso，折中方案
 
-### 3. 参数选择
+### 参数选择
 - **交叉验证**：避免在测试集上调参
 - **RidgeCV/LassoCV**：自动选择最优 α
 - **正则化路径**：观察 α 变化时系数的变化
