--- a/3_lendingclub.qmd
+++ b/3_lendingclub.qmd
@@ -1,6 +1,8 @@
-# 项目3：Lending Club（借贷违约风险）学生项目要求
+---
+title: 项目3：Lending Club（借贷违约风险）学生项目要求
+---
 
-## 0. 项目背景
+## 项目背景
 
 * **项目名称**：借贷违约风险评估（Lending Club）
 * **应用场景 / 价值**：在线撮合的个人信用贷需要在放款前评估违约概率，以定价利率、设定授信或拒绝申请。你们将基于历史贷款数据构建一个**放款前可用**的违约预测模型，理解信用风险关键因素，并以图表与文字解释业务含义。
@@ -10,7 +12,7 @@
 
 ---
 
-## 1. 项目任务（必须完成）
+## 项目任务（必须完成）
 
 1. **目标变量口径**：将 `loan_status` 统一映射为二分类标签：违约=1、非违约=0；请在报告中提供**映射表**与口径解释。
 2. **样本选择**：统一使用 **2013–2014 年**发放且**期限 36 个月**的贷款作为训练/测试样本（这些贷款在 2018 年底前已结束，结局可观察）。
@@ -27,7 +29,7 @@
 
 ---
 
-## 2. 团队与分工（6-10 人）
+## 团队与分工（6-10 人）
 
 * **推荐规模**：6-10 人；可根据团队实际人数灵活调整。
 * **核心角色（必须）**：
@@ -54,7 +56,7 @@
 
 ---
 
-## 3. 数据与合规
+## 数据与合规
 
 * **数据说明**：在 `README.md` 或报告中写明来源、时间范围（本项目用 2013–2014, 36 期）、关键字段、目标变量口径、过滤规则。
 * **隐私与伦理**：数据不含个人敏感信息；如追加外部数据，请确保合法来源并说明许可与处理。
@@ -62,7 +64,7 @@
 
 ---
 
-## 4. 交付与时间线（统一里程碑）
+## 交付与时间线（统一里程碑）
 
 * **W3：立项检查**
 
@@ -76,7 +78,7 @@
 
 ---
 
-## 5. 交付清单（统一目录）
+## 交付清单（统一目录）
 
 ```
 project_root/
@@ -96,7 +98,7 @@ project_root/
 
 ---
 
-## 6. 技术要求
+## 技术要求
 
 **最低要求（必须达成）**
 
@@ -115,11 +117,11 @@ project_root/
 
 ---
 
-## 7. 评分与 Rubric（统一口径，可微调）
+## 评分与 Rubric（统一口径，可微调）
 
 > 总评 = **团队分 90% + 互评 10%**；如公布**难度系数**（0.9 / 1.0 / 1.1），按乘数计算。
 
-### 7.1 团队分（90%）
+### 团队分（90%）
 
 > 其中"报告与可读性"仅针对**报告文本与图表**评分。
 
@@ -132,14 +134,14 @@ project_root/
 | 报告与可读性(30) | 结构清晰、图表规范、叙述有因有据 | 大体清晰        | 说明不全/结构混乱  | 缺失关键说明 |
 | 演示表达(20)    | 逻辑清楚，答辩到位      | 讲清主要结论      | 表达一般       | 不能自洽   |
 
-### 7.2 互评（10%）
+### 互评（10%）
 
 * 每位成员对**其他人**打分；与教师评分结合。
 * 若互评明显失真，教师可依据提交记录与痕迹进行调整。
 
 ---
 
-## 8. 报告与答辩内容（统一骨架）
+## 报告与答辩内容（统一骨架）
 
 **报告（6–8 页）**
 
@@ -154,7 +156,7 @@ project_root/
 
 ---
 
-## 9. 提交与命名规范
+## 提交与命名规范
 
 * **打包**：提交 `.zip`，保留目录结构；不要包含超大无关文件。
 * **命名**：`【LC】_【班级】_【组别】.zip`；报告/幻灯使用相同前缀。
@@ -162,7 +164,7 @@ project_root/
 
 ---
 
-## 10. 学术诚信与 AI 使用政策
+## 学术诚信与 AI 使用政策
 
 * 允许用 AI 工具进行**资料查询、代码解释、调试建议**；
 * **禁止**：粘贴未理解的大段生成代码、虚构数据/结果、抄袭他组；
