--- a/4_homecredit.qmd
+++ b/4_homecredit.qmd
@@ -1,6 +1,8 @@
-# 项目4：Home Credit Default Risk 学生项目要求
+---
+title: 项目4：Home Credit Default Risk 学生项目要求
+---
 
-## 0. 项目背景
+## 项目背景
 
 * **项目名称**：Home Credit 个人信用违约风险评估
 * **应用场景 / 价值**：在放款前预测申请人的违约概率（Probability of Default, PD），以支持授信额度、定价与拒绝策略；理解影响违约的关键因素，并用图表与文字解释业务含义。
@@ -17,7 +19,7 @@
 
 ---
 
-## 1. 项目任务（必须完成）
+## 项目任务（必须完成）
 
 1. **目标变量口径**：以 `application_train.TARGET` 为标签；在报告中明确 `TARGET=1/0` 的含义，并打印标签比例（说明类别不平衡）。
 2. **样本选择**：本项目默认使用课程提供的 `application_train` **子集**作为训练/测试样本（**最低要求**仅用主表，见 §6）。
@@ -34,7 +36,7 @@
 
 ---
 
-## 2. 团队与分工（6-10 人）
+## 团队与分工（6-10 人）
 
 * **推荐规模**：6-10 人；可根据团队实际人数灵活调整。
 * **核心角色（必须）**：
@@ -61,7 +63,7 @@
 
 ---
 
-## 3. 数据与合规
+## 数据与合规
 
 * **数据说明**：在 `README.md` 或报告中写明来源、时间范围、关键字段、目标变量口径、过滤规则。
 * **隐私与伦理**：数据已匿名化；如追加外部数据，确保合法来源并说明许可与处理。
@@ -69,7 +71,7 @@
 
 ---
 
-## 4. 交付与时间线（统一里程碑）
+## 交付与时间线（统一里程碑）
 
 * **W3：立项检查**
 
@@ -83,7 +85,7 @@
 
 ---
 
-## 5. 交付清单（统一目录）
+## 交付清单（统一目录）
 
 ```
 project_root/
@@ -103,7 +105,7 @@ project_root/
 
 ---
 
-## 6. 技术要求
+## 技术要求
 
 **最低要求（必须达成）**
 
@@ -127,11 +129,11 @@ project_root/
 
 ---
 
-## 7. 评分与 Rubric（统一口径，可微调）
+## 评分与 Rubric（统一口径，可微调）
 
 > 总评 = **团队分 90% + 互评 10%**；如公布**难度系数**（0.9 / 1.0 / 1.1），按乘数计算。
 
-### 7.1 团队分（90%）
+### 团队分（90%）
 
 > 其中"报告与可读性"仅针对**报告文本与图表**评分。
 
@@ -144,14 +146,14 @@ project_root/
 | 报告与可读性(30) | 结构清晰、图表规范、叙述有因有据 | 大体清晰        | 说明不全/结构混乱  | 缺失关键说明 |
 | 演示表达(20)    | 逻辑清楚，答辩到位      | 讲清主要结论      | 表达一般       | 不能自洽   |
 
-### 7.2 互评（10%）
+### 互评（10%）
 
 * 每位成员对**其他人**打分；与教师评分结合。
 * 若互评明显失真，教师可依据提交记录与痕迹进行调整。
 
 ---
 
-## 8. 报告与答辩内容（统一骨架）
+## 报告与答辩内容（统一骨架）
 
 **报告（6–8 页）**
 
@@ -166,7 +168,7 @@ project_root/
 
 ---
 
-## 9. 提交与命名规范
+## 提交与命名规范
 
 * **打包**：提交 `.zip`，保留目录结构；不要包含超大无关文件。
 * **命名**：`【HC】_【班级】_【组别】.zip`；报告/幻灯使用相同前缀。
@@ -174,7 +176,7 @@ project_root/
 
 ---
 
-## 10. 学术诚信与 AI 使用政策
+## 学术诚信与 AI 使用政策
 
 * 允许用 AI 工具进行**资料查询、代码解释、调试建议**；
 * **禁止**：粘贴未理解的大段生成代码、虚构数据/结果、抄袭他组；
