--- a/5_ieee-cis.qmd
+++ b/5_ieee-cis.qmd
@@ -1,6 +1,8 @@
-# 项目5：IEEE‑CIS Fraud Detection 学生项目要求
+---
+title: 项目5：IEEE‑CIS Fraud Detection 学生项目要求
+---
 
-## 0. 项目背景
+## 项目背景
 
 * **项目名称**：线上交易实时反欺诈（IEEE‑CIS / Vesta）
 * **应用场景 / 价值**：在**交易授权前**识别高风险交易，降低欺诈损失与误拒率（减少“好人被拒”）。你们将基于历史交易数据构建一个**可在线部署**的欺诈概率模型，并解释关键风险特征与业务取舍（查得率 vs. 误杀率）。
@@ -13,7 +15,7 @@
 
 ---
 
-## 1. 项目任务（必须完成）
+## 项目任务（必须完成）
 
 1. **目标变量口径**：以主表 `isFraud` 为标签，`1=欺诈/0=正常`；报告中打印**类比例**（说明极度不平衡）。
 2. **样本选择**：统一使用课程提供的 `ieee_train_sample.csv`（主表子集）作为训练/测试样本（**最低要求只用主表**）。
@@ -30,7 +32,7 @@
 
 ---
 
-## 2. 团队与分工（6-10 人）
+## 团队与分工（6-10 人）
 
 * **推荐规模**：6-10 人；可根据团队实际人数灵活调整。
 * **核心角色（必须）**：
@@ -57,7 +59,7 @@
 
 ---
 
-## 3. 数据与合规
+## 数据与合规
 
 * **数据说明**：在 `README.md` 或报告中写明来源、时间范围、关键字段、目标变量口径、过滤规则。
 * **隐私与伦理**：数据已匿名化；如追加外部数据，确保合法来源并说明许可与处理。
@@ -65,7 +67,7 @@
 
 ---
 
-## 4. 交付与时间线（统一里程碑）
+## 交付与时间线（统一里程碑）
 
 * **W3：立项检查**
 
@@ -79,7 +81,7 @@
 
 ---
 
-## 5. 交付清单（统一目录）
+## 交付清单（统一目录）
 
 ```
 project_root/
@@ -99,7 +101,7 @@ project_root/
 
 ---
 
-## 6. 技术要求
+## 技术要求
 
 **最低要求（必须达成）**
 
@@ -119,11 +121,11 @@ project_root/
 
 ---
 
-## 7. 评分与 Rubric（统一口径，可微调）
+## 评分与 Rubric（统一口径，可微调）
 
 > 总评 = **团队分 90% + 互评 10%**；如公布**难度系数**（0.9 / 1.0 / 1.1），按乘数计算。
 
-### 7.1 团队分（90%）
+### 团队分（90%）
 
 > 其中"报告与可读性"仅针对**报告文本与图表**评分。
 
@@ -136,14 +138,14 @@ project_root/
 | 报告与可读性(30) | 结构清晰、图表规范、叙述有因有据 | 大体清晰        | 说明不全/结构混乱  | 缺失关键说明 |
 | 演示表达(20)    | 逻辑清楚，答辩到位      | 讲清主要结论      | 表达一般       | 不能自洽   |
 
-### 7.2 互评（10%）
+### 互评（10%）
 
 * 每位成员对**其他人**打分；与教师评分结合。
 * 若互评明显失真，教师可依据提交记录与痕迹进行调整。
 
 ---
 
-## 8. 报告与答辩内容（统一骨架）
+## 报告与答辩内容（统一骨架）
 
 **报告（6–8 页）**
 
@@ -158,7 +160,7 @@ project_root/
 
 ---
 
-## 9. 提交与命名规范
+## 提交与命名规范
 
 * **打包**：提交 `.zip`，保留目录结构；不要包含超大无关文件。
 * **命名**：`【IEEE】_【班级】_【队名】.zip`；报告/幻灯使用相同前缀。
@@ -166,7 +168,7 @@ project_root/
 
 ---
 
-## 10. 学术诚信与 AI 使用政策
+## 学术诚信与 AI 使用政策
 
 * 允许用 AI 工具进行**资料查询、代码解释、调试建议**；
 * **禁止**：粘贴未理解的大段生成代码、虚构数据/结果、抄袭他组；
