--- a/6_gresearch.qmd
+++ b/6_gresearch.qmd
@@ -1,6 +1,8 @@
-# 项目6：G‑Research Crypto Forecasting 学生项目要求
+---
+title: 项目6：G‑Research Crypto Forecasting 学生项目要求
+---
 
-## 0. 项目背景
+## 项目背景
 
 * **项目名称**：加密资产短期收益率预测（G‑Research Crypto）
 * **应用场景 / 价值**：针对多种主流加密货币（BTC、ETH 等），在**未来15分钟**（或指定窗口）内预测其**对数收益率（Target）**，用于风险控制与交易信号。你们需要在“仅基于过去可见信息”的前提下构建回归模型，并用图表与文字解释关键驱动因素与业务含义。
@@ -9,7 +11,7 @@
 
 ---
 
-## 1. 项目任务（必须完成）
+## 项目任务（必须完成）
 
 1. **目标变量口径**：以数据中的 `Target` 为标签；报告中解释其含义（未来短窗收益/对数收益的残差化）并**打印分布**（均值、标准差、分位数）。
 2. **样本选择**：使用课程提供的 `crypto_train_sample.csv`（主表子集）作为训练/测试样本（**最低要求只用主表**）。
@@ -26,7 +28,7 @@
 
 ---
 
-## 2. 团队与分工（6-10 人）
+## 团队与分工（6-10 人）
 
 * **推荐规模**：6-10 人；可根据团队实际人数灵活调整。
 * **核心角色（必须）**：
@@ -53,7 +55,7 @@
 
 ---
 
-## 3. 数据与合规
+## 数据与合规
 
 * **数据说明**：在 `README.md` 或报告中写明来源、时间范围、资产覆盖、关键字段、目标变量口径、过滤规则。
 * **隐私与伦理**：数据为公开市场数据；如追加外部因子（如比特币主导度、恐慌贪婪指数），须注明来源与许可，并严格对齐**时间戳**，避免引入未来信息。
@@ -61,7 +63,7 @@
 
 ---
 
-## 4. 交付与时间线（统一里程碑）
+## 交付与时间线（统一里程碑）
 
 * **W3：立项检查**
 
@@ -75,7 +77,7 @@
 
 ---
 
-## 5. 交付清单（统一目录）
+## 交付清单（统一目录）
 
 ```
 project_root/
@@ -95,7 +97,7 @@ project_root/
 
 ---
 
-## 6. 技术要求
+## 技术要求
 
 **最低要求（必须达成）**
 
@@ -115,11 +117,11 @@ project_root/
 
 ---
 
-## 7. 评分与 Rubric（统一口径，可微调）
+## 评分与 Rubric（统一口径，可微调）
 
 > 总评 = **团队分 90% + 互评 10%**；如公布**难度系数**（0.9 / 1.0 / 1.1），按乘数计算。
 
-### 7.1 团队分（90%）
+### 团队分（90%）
 
 > 其中"报告与可读性"仅针对**报告文本与图表**评分。
 
@@ -132,14 +134,14 @@ project_root/
 | 报告与可读性(30) | 结构清晰、图表规范、叙述有因有据 | 大体清晰        | 说明不全/结构混乱  | 缺失关键说明 |
 | 演示表达(20)    | 逻辑清楚，答辩到位      | 讲清主要结论      | 表达一般       | 不能自洽   |
 
-### 7.2 互评（10%）
+### 互评（10%）
 
 * 每位成员对**其他人**打分；与教师评分结合。
 * 若互评明显失真，教师可依据提交记录与痕迹进行调整。
 
 ---
 
-## 8. 报告与答辩内容（统一骨架）
+## 报告与答辩内容（统一骨架）
 
 **报告（6–8 页）**
 
@@ -154,7 +156,7 @@ project_root/
 
 ---
 
-## 9. 提交与命名规范
+## 提交与命名规范
 
 * **打包**：提交 `.zip`，保留目录结构；不要包含超大无关文件。
 * **命名**：`【CRYPTO】_【班级】_【队名】.zip`；报告/幻灯使用相同前缀。
@@ -162,7 +164,7 @@ project_root/
 
 ---
 
-## 10. 学术诚信与 AI 使用政策
+## 学术诚信与 AI 使用政策
 
 * 允许用 AI 工具进行**资料查询、代码解释、调试建议**；
 * **禁止**：粘贴未理解的大段生成代码、虚构数据/结果、抄袭他组；
