--- a/w2_data_processing.qmd
+++ b/w2_data_processing.qmd
@@ -1,6 +1,9 @@
-# 第二讲：数据处理与线性回归实践
+---
+title: 第二讲：数据处理与线性回归实践
+---
 
 ```{python}
+#| echo: false
 import matplotlib.pyplot as plt
 # 根据操作系统设置不同的字体
 import platform
@@ -74,7 +77,7 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ---
 
-## 1.1 缺失值处理
+## 缺失值处理
 
 ### 什么是缺失值？
 
@@ -146,7 +149,7 @@ graph TD
 
 ---
 
-### 1. 删除法
+### 删除法
 
 **原始数据**：`[100, NaN, 120, 110, NaN]`
 
@@ -164,7 +167,7 @@ graph TD
 
 ---
 
-### 2. 填充法
+### 填充法
 
 **常用填充值**：
 
@@ -184,7 +187,7 @@ graph TD
 
 ---
 
-### 3. 高级方法（简介）
+### 高级方法（简介）
 
 **模型预测填充**：
 - 用其他特征预测缺失值
@@ -198,7 +201,7 @@ graph TD
 
 ---
 
-## 1.2 异常值检测与处理
+## 异常值检测与处理
 
 ### 什么是异常值？
 
@@ -318,7 +321,7 @@ graph TD
 
 ---
 
-## 1.3 归一化（Normalization）
+## 归一化（Normalization）
 
 ### 为什么需要归一化？
 
@@ -449,7 +452,7 @@ plt.show()
 
 ---
 
-## 2.1 残差（Residual）
+## 残差（Residual）
 
 ### 核心概念
 
@@ -531,7 +534,7 @@ plt.show()
 
 ---
 
-## 2.2 MAE（平均绝对误差）
+## MAE（平均绝对误差）
 
 ### 定义
 
@@ -563,7 +566,7 @@ $$
 
 ---
 
-## 2.3 RMSE（均方根误差）
+## RMSE（均方根误差）
 
 ### 定义
 
@@ -628,7 +631,7 @@ print(comparison_data.to_string(index=False))
 
 ---
 
-## 2.4 R² 决定系数
+## R² 决定系数
 
 ### 定义
 
@@ -705,7 +708,7 @@ plt.show()
 
 ---
 
-## 3.1 为什么需要可视化？
+## 为什么需要可视化？
 
 ### Anscombe's Quartet（安斯库姆四重奏）
 
@@ -756,9 +759,9 @@ plt.show()
 
 ---
 
-## 3.2 常用图表类型
+## 常用图表类型
 
-### 1. 散点图（Scatter Plot）
+### 散点图（Scatter Plot）
 
 **用途**：观察两个变量的关系
 
@@ -791,7 +794,7 @@ plt.show()
 
 ---
 
-### 2. 直方图（Histogram）
+### 直方图（Histogram）
 
 **用途**：观察单个变量的分布
 
@@ -828,7 +831,7 @@ plt.show()
 
 ---
 
-### 3. 相关系数热力图（Heatmap）
+### 相关系数热力图（Heatmap）
 
 **用途**：一次性看所有特征之间的相关性
 
@@ -862,7 +865,7 @@ plt.show()
 
 ---
 
-## 3.3 可视化陷阱
+## 可视化陷阱
 
 ### 陷阱 1：截断 Y 轴
 
